# Transient-study

./: README.md  pyproject.toml  release.yml  windows_entry.py
.github/workflows/: build-windows-exe.yml  ci.yml
examples/: example_config.json
src/snubber_analyzer/: __init__.py  analyze.py  cable.py  cli.py  netlist.py  runner.py  simulate.py  transformer.py
tests/: test_cable.py  test_netlist.py  test_transformer.py  test_validation.py
