[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snubber-analyzer"
version = "0.1.0"
description = "HV switching-transient / snubber sizing tool, backed by ngspice"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "build>=1.0",
]

[project.scripts]
snubber-analyzer = "snubber_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
